[metadata]
name = taseapi
version =t0.1
description = A library for the TASE API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JPDevelop/taseapi
author = Yonatan Perlman
author_email = git@yonatan.me
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
    requests >= 2.23
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
